--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.wanwei.o2oDatabase</groupId>
-  <artifactId>maven-o2oDatabase</artifactId>
+  <artifactId>wanwei002maven-o2oDatabase</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>maven-o2oDatabase Maven Webapp</name>
